--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "version": 2,
   "builds": [{ "src": "./app.js", "use": "@vercel/node" }],
-  "routes": [{ "source": "/(.*)", "destination": "/api" }]
+  "routes": [{ "src": "/(.*)", "dest": "/api" }]
 }
